fix white space

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ hr {
 	min-width: 300px;
 }
 .white-block {
-	width: 105%;
+	width: 110%;
 	background-color: #FFF;
 	position: relative;
 	left: -15px;
